[package]

name = "getting-started"
version = "0.0.0"
authors = [
    "TyOverby <ty@pre-alpha.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]

[dependencies.piston]

git = "https://github.com/PistonDevelopers/piston"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"

[dependencies.piston2d-graphics]

git = "https://github.com/PistonDevelopers/graphics"

[dependencies.piston2d-opengl_graphics]

git = "https://github.com/PistonDevelopers/opengl_graphics"
